fix: toggle card description

--- a/card-products.html
+++ b/card-products.html
@@ -589,11 +589,13 @@
             </div>
           </div>
           <div class="card__footer">
-            <div class="card__footer-lincks-block">
-              <div class="card__footer-tab">
-                <input type="radio" id="tab1" name="tab-group" checked>
-                <label for="tab1" class="card__footer-tab-title">Описание</label>
-                <section class="card__footer-tab-content">
+              <input class="input-card-1" type="radio" id="tab1" name="tab-group" checked>
+              <label for="tab1" class="card__footer-tab-title">Описание</label>
+              <input class="input-card-2" type="radio" id="tab2" name="tab-group">
+              <label for="tab2" class="card__footer-tab-title">Информация</label>
+              <input class="input-card-3" type="radio" id="tab3" name="tab-group">
+              <label for="tab3" class="card__footer-tab-title">Совместимость</label>
+                <section class="card__footer-tab-content card-1">
                   <p class="card__footer-text">
                     Традиционная игла для локализации непальпируемого объекта в молочной железе. Доступна в различной
                     длине
@@ -603,11 +605,7 @@
                     для точн
                   </p>
                 </section>
-              </div>
-              <div class="card__footer-tab">
-                <input type="radio" id="tab2" name="tab-group">
-                <label for="tab2" class="card__footer-tab-title">Информация</label>
-                <section class="card__footer-tab-content">
+                <section class="card__footer-tab-content card-2">
                   <p class="card__footer-text">
                     Информация Традиционная игла для локализации непальпируемого объекта в молочной железе. Доступна в
                     различной длине
@@ -617,11 +615,7 @@
                     для точн
                   </p>
                 </section>
-              </div>
-              <div class="card__footer-tab">
-                <input type="radio" id="tab3" name="tab-group">
-                <label for="tab3" class="card__footer-tab-title">Совместимость</label>
-                <section class="card__footer-tab-content">
+                <section class="card__footer-tab-content card-3">
                   <p class="card__footer-text">
                     Совместимость Традиционная игла для локализации непальпируемого объекта в молочной железе. Доступна
                     в различной длине
@@ -631,8 +625,6 @@
                     для точн
                   </p>
                 </section>
-              </div>
-            </div>
             <div class="card__footer-text-block">
             </div>
             <div class="accordion-wrapper">
