fix: fixed the photo height error on the mobile version, scroll scroll and corrected the tab for small photos and added a wrapper in the form of a div for a larger photo and set the height to it

--- a/card-products.html
+++ b/card-products.html
@@ -488,7 +488,9 @@
           </div>
           <div class="card__main">
             <div class="card__block-foto">
+              <div class="card__foto-main" >  
               <img src="./common/cards-img/img-card0.png" alt="" class="card__foto">
+            </div>
               <div class="card__block-foto-mini">
                 <div class="card__foto-tab">
                   <input type="radio" id="img1" name="img-group" checked>
@@ -505,9 +507,23 @@
                   </label>
                 </div>
                 <div class="card__foto-tab">
+                  <input type="radio" id="img1" name="img-group" checked>
+                  <label for="img1" class="card__foto-radio">
+                    <img id="0" src="./common/cards-img/mini-img-card.png" alt="mini-foto"
+                      class="card__foto-mini"></img>
+                  </label>
+                </div>
+                <div class="card__foto-tab">
                   <input type="radio" id="img3" name="img-group">
                   <label for="img3" class="card__foto-radio">
                     <img id="2" src="./common/cards-img/mini-img-card3.png" alt="mini-foto"
+                      class="card__foto-mini"></img>
+                  </label>
+                </div>
+                <div class="card__foto-tab">
+                  <input type="radio" id="img1" name="img-group" checked>
+                  <label for="img1" class="card__foto-radio">
+                    <img id="0" src="./common/cards-img/mini-img-card.png" alt="mini-foto"
                       class="card__foto-mini"></img>
                   </label>
                 </div>
