feat: add range input conponents

--- a/catalog-individual.html
+++ b/catalog-individual.html
@@ -371,21 +371,21 @@
               <p class="filter-bar__price-name">
                 Цена
               </p>
-              <!-- <div class="range-input filter-modal__range-input">
-                <div class="range-input__values">
-                  <div class="range-input__value">
-                    <span class="range-input__value-from">0</span>
+              <div class="range-input">
+                <div class="range-input__values-modal">
+                  <div class="range-input__value-modal">
+                    <span class="range-input__value-from-modal">0</span>
                   </div>
-                  <div class="range-input__value">
-                    <span class="range-input__value-to">0</span>
+                  <div class="range-input__value-modal">
+                    <span class="range-input__value-to-modal">0</span>
                   </div>
                 </div>
-                <div class="range-input__inputs">
-                  <div class="range-input__track"></div>
-                  <input type="range" min="1000" max="100000" value="1000" class="range-input__from">
-                  <input type="range" min="1000" max="100000" value="100000" class="range-input__to">
+                <div class="range-input__inputs-modal">
+                  <div class="range-input__track-modal "></div>
+                  <input type="range" min="1000" max="100000" value="1000" class="range-input__from-modal">
+                  <input type="range" min="1000" max="100000" value="100000" class="range-input__to-modal">
                 </div>
-              </div> -->
+              </div>
             </div>
 
             <div class="filter-bar__sale-products filter-modal__sale-products">
@@ -403,15 +403,15 @@
                 <input type="search" placeholder="Поиск" class="search__input filter-bar__manufacturer-search-input" />
               </div>
               <div class="filter-bar__manufacturer-checkboxes filter-modal__checkboxes ">
-                <input type="checkbox" id="name-brand-modal" name="name-brand-modal">
+                <input class="sheckbox__sale" type="checkbox" id="name-brand-modal" name="name-brand-modal">
                 <label for="name-brand-modal">Название бренда</label>
-                <input type="checkbox" id="more-brand-modal" name="more-brand-modal">
+                <input class="sheckbox__sale" type="checkbox" id="more-brand-modal" name="more-brand-modal">
                 <label for="more-brand-modal">Еще одно название</label>
-                <input type="checkbox" id="brand-modal" name="brand-modal">
+                <input class="sheckbox__sale" type="checkbox" id="brand-modal" name="brand-modal">
                 <label for="brand-modal"> Бренд </label>
-                <input type="checkbox" id="fourth-brand-modal" name="fourth-brand-modal">
+                <input class="sheckbox__sale" type="checkbox" id="fourth-brand-modal" name="fourth-brand-modal">
                 <label for="fourth-brand-modal">Четвертый бренд </label>
-                <input type="checkbox" id="fifth-brand-modal" name="fifth-brand-modal">
+                <input class="sheckbox__sale" type="checkbox" id="fifth-brand-modal" name="fifth-brand-modal">
                 <label for="fifth-brand-modal">Пятый бренд</label>
               </div>
             </div>
@@ -628,7 +628,7 @@
               <p class="filter-bar__price-name">
                 Цена
               </p>
-              <!-- <div class="range-input">
+              <div class="range-input">
                 <div class="range-input__values">
                   <div class="range-input__value">
                     <span class="range-input__value-from">0</span>
@@ -639,10 +639,10 @@
                 </div>
                 <div class="range-input__inputs">
                   <div class="range-input__track"></div>
-                  <input type="range" min="1000" max="100000" value="1000" class="range-input__from">
-                  <input type="range" min="1000" max="100000" value="100000" class="range-input__to">
+                  <input id="range-filter" type="range" min="1000" max="100000" value="1000" class="range-input__from">
+                  <input id="range-filter" type="range" min="1000" max="100000" value="100000" class="range-input__to">
                 </div>
-              </div> -->
+              </div>
             </div>
             <div class="filter-bar__sale-products">
               <input type="checkbox" id="sale" class="sheckbox__sale" name="sale">
