fix: link, add: aside

--- a/about.html
+++ b/about.html
@@ -490,9 +490,9 @@
           </div>
           <aside class="about__aside">
             <ul class="aside__list">
-              <li><a class="aside__item aside__item--this" href="./about">О компании</a></li>
-              <li><a class="aside__item" href="#">Способы оплаты товаров</a></li>
-              <li><a class="aside__item" href="#">Условия доставки</a></li>
+              <li><a class="aside__item aside__item--this" href="./about.html">О компании</a></li>
+              <li><a class="aside__item" href="./paysystem.html">Способы оплаты товаров</a></li>
+              <li><a class="aside__item" href="./delivery.html">Условия доставки</a></li>
               <li><a class="aside__item" href="#">Возврат товара</a></li>
               <li><a class="aside__item" href="#">Оптовым покупателям</a></li>
             </ul>
