--- a/delivery.html
+++ b/delivery.html
@@ -479,47 +479,66 @@
           <span class="card__nav-slash">/</span>
           <a href="" class="card__nav-link">Доставка</a>
         </nav>
-        <h1 class="delivery__title">
-          Наша компания предлагает Вам несколько вариантов доставки заказа:
-        </h1>
-        <ol class="delivery__list">
-          <li class="delivery__item">Доставка курьером по Москве.
-            <p class="delivery__text">
-              Стоимость курьерской доставки по Москве составляет 500 рублей.
-              При наличии товара на складе, доставка осуществляется в течение от 1 до 3 рабочих дней после оформления заказа.
-              При оформлении товара "под заказ", доставка производится в течение от 1 до 2 рабочих дней после поступления товара на наш склад. 
-            </p>
-          </li>
-          <li class="delivery__item">Доставка курьером по Московской области.
-            <p class="delivery__text">
-              Стоимость курьерской доставки по Московской области составляет 1 000 рублей.
-              При наличии товар на складе, доставка осуществляется в течение от 1 до 3 рабочих дней после оформления заказа.
-              При оформлении товара "под заказ", доставка производится в течение от 1 до 2 рабочих дней после поступления товара на наш склад.
-              Доставка курьером по Московской области осуществляется только в Одинцово, Химки, Люберцы, Железнодорожный, Сходню, Зеленоград, Королев, Подольск. Для доставки в Щелково, Щербинку и Балашиху уточняйте информацию у менеджера.
-            </p>
-          </li>
-          <li class="delivery__item">Доставка курьерской службой по России.
-            <p class="delivery__text">
-              Доставка по России осуществляется курьерской службой.
-              Срок доставки по России - в течение от 1 до 3 рабочих дней с даты отправки товара.
-              Стоимость и сроки доставки по России рассчитываются индивидуально в зависимости от веса посылки и города доставки.
-              При выборе способа доставки "Доставка по России", проведение оформления и оплаты заказа производится после подтверждения и расчета стоимости доставки менеджером.
-            </p>
-          </li>
-          <li class="delivery__item">Самовывоз.
-            <p class="delivery__text">
-              Осуществляется бесплатно.
-              При наличии товара на складе - в любое удобное время с понедельника по пятницу с 10:00 до 18:00.
-              При оформлении товара "под заказ", после получения уведомления о поступлении товара на наш склад, Вы сможете забрать товар в любое удобное время с понедельника по пятницу с 10:00 до 18:00.
-              Адрес пункта выдачи товара: 115533, г.Москва, проспект Андропова, д.22.
-            </p>
-          </li>
-          <li class="delivery__item">Условия выдачи товара.
-            <p class="delivery__text">При условии оплаты заказа пластиковой картой передача товара в доставку, либо выдача со склада осуществляется со дня зачисления денежных средств на наш расчетный счет.
-              Частные покупатели для получения товара должны предъявить паспорт владельца пластиковой карты, по которой производилась оплата заказа, либо  предъявить квитанцию с отметкой Сбербанка об оплате.
-            </p>
-          </li>
-        </ol>
+        <span class="mobile-aside__link mobile-aside__link--title">Условия доставки <span
+          class="aside-chevrone">&#10095;</span></span>
+      <div class="mobile-aside">
+        <a class="mobile-aside__link" href="./paysystem.html">Способы оплаты товаров</a>
+        <a class="mobile-aside__link" href="./about.html">О компании</a>
+        <a class="mobile-aside__link" href="/">Возврат товара</a>
+        <a class="mobile-aside__link" href="/">Оптовым покупателям</a>
+      </div>
+        <aside class="about__aside">
+          <ul class="aside__list">
+            <li><a class="aside__item" href="./about.html">О компании</a></li>
+            <li><a class="aside__item" href="./paysystem.html">Способы оплаты товаров</a></li>
+            <li><a class="aside__item aside__item--this" href="./delivery.html">Условия доставки</a></li>
+            <li><a class="aside__item" href="#">Возврат товара</a></li>
+            <li><a class="aside__item" href="#">Оптовым покупателям</a></li>
+          </ul>
+        </aside>
+        <div class="delivery__content">
+          <h1 class="delivery__title">
+            Наша компания предлагает Вам несколько вариантов доставки заказа:
+          </h1>
+          <ol class="delivery__list">
+            <li class="delivery__item">Доставка курьером по Москве.
+              <p class="delivery__text">
+                Стоимость курьерской доставки по Москве составляет 500 рублей.
+                При наличии товара на складе, доставка осуществляется в течение от 1 до 3 рабочих дней после оформления заказа.
+                При оформлении товара "под заказ", доставка производится в течение от 1 до 2 рабочих дней после поступления товара на наш склад. 
+              </p>
+            </li>
+            <li class="delivery__item">Доставка курьером по Московской области.
+              <p class="delivery__text">
+                Стоимость курьерской доставки по Московской области составляет 1 000 рублей.
+                При наличии товар на складе, доставка осуществляется в течение от 1 до 3 рабочих дней после оформления заказа.
+                При оформлении товара "под заказ", доставка производится в течение от 1 до 2 рабочих дней после поступления товара на наш склад.
+                Доставка курьером по Московской области осуществляется только в Одинцово, Химки, Люберцы, Железнодорожный, Сходню, Зеленоград, Королев, Подольск. Для доставки в Щелково, Щербинку и Балашиху уточняйте информацию у менеджера.
+              </p>
+            </li>
+            <li class="delivery__item">Доставка курьерской службой по России.
+              <p class="delivery__text">
+                Доставка по России осуществляется курьерской службой.
+                Срок доставки по России - в течение от 1 до 3 рабочих дней с даты отправки товара.
+                Стоимость и сроки доставки по России рассчитываются индивидуально в зависимости от веса посылки и города доставки.
+                При выборе способа доставки "Доставка по России", проведение оформления и оплаты заказа производится после подтверждения и расчета стоимости доставки менеджером.
+              </p>
+            </li>
+            <li class="delivery__item">Самовывоз.
+              <p class="delivery__text">
+                Осуществляется бесплатно.
+                При наличии товара на складе - в любое удобное время с понедельника по пятницу с 10:00 до 18:00.
+                При оформлении товара "под заказ", после получения уведомления о поступлении товара на наш склад, Вы сможете забрать товар в любое удобное время с понедельника по пятницу с 10:00 до 18:00.
+                Адрес пункта выдачи товара: 115533, г.Москва, проспект Андропова, д.22.
+              </p>
+            </li>
+            <li class="delivery__item">Условия выдачи товара.
+              <p class="delivery__text">При условии оплаты заказа пластиковой картой передача товара в доставку, либо выдача со склада осуществляется со дня зачисления денежных средств на наш расчетный счет.
+                Частные покупатели для получения товара должны предъявить паспорт владельца пластиковой карты, по которой производилась оплата заказа, либо  предъявить квитанцию с отметкой Сбербанка об оплате.
+              </p>
+            </li>
+          </ol>
+        </div>
       </div>
     </main>
     <footer class="footer">
