--- a/paysystem.html
+++ b/paysystem.html
@@ -479,7 +479,25 @@
           <span class="card__nav-slash">/</span>
           <a href="" class="card__nav-link">Способы оплаты</a>
         </nav>
-        <h1 class="paysystem__title">
+        <span class="mobile-aside__link mobile-aside__link--title">Способы оплаты товаров<span
+          class="aside-chevrone">&#10095;</span></span>
+      <div class="mobile-aside">
+        <a class="mobile-aside__link" href="./about.html">О компании</a>
+        <a class="mobile-aside__link" href="./paysystem.html">Условия доставки</a>
+        <a class="mobile-aside__link" href="/">Возврат товара</a>
+        <a class="mobile-aside__link" href="/">Оптовым покупателям</a>
+      </div>
+        <aside class="about__aside">
+          <ul class="aside__list">
+            <li><a class="aside__item" href="./about.html">О компании</a></li>
+            <li><a class="aside__item aside__item--this" href="./paysystem.html">Способы оплаты товаров</a></li>
+            <li><a class="aside__item" href="./delivery.html">Условия доставки</a></li>
+            <li><a class="aside__item" href="#">Возврат товара</a></li>
+            <li><a class="aside__item" href="#">Оптовым покупателям</a></li>
+          </ul>
+        </aside>
+        <div class="paysystem__content">
+          <h1 class="paysystem__title">
             Наша компания старается делать все возможное для удобства клиентов и партнеров, поэтому мы предлагаем несколько вариантов оплаты заказа:
         </h1>
         <ol class="paysystem__list">
@@ -558,6 +576,7 @@
             <tr><td>Корр.счет</td><td>30101810400000000225</td></tr>
           </tbody>
         </table>
+        </div>
       </div>
     </main>
     <footer class="footer">
