--- a/contacts.html
+++ b/contacts.html
@@ -503,9 +503,9 @@
                   </span>
                   <span class="contacts__email">
                     <span class="contacts__email-title">E-MAIL</span>
-                    <a href="mailto:info@sitenam.ru" class="contacts__email-address">
+                    <a href="mailto:info@allna-medical.ru" class="contacts__email-address">
                       <img class="contacts__icon" src="./common/svg/Message-green.svg" alt="">
-                      info@sitenam.ru</a>
+                      info@allna-medical.ru</a>
                   </span>
                 </div>
                 <button class=" main-btn footer__feedback  ">
