--- a/index.html
+++ b/index.html
@@ -12,21 +12,6 @@
 </head>
 
 <body>
-  <div class=" dropdown">
-    <div class="dropdown__owerlay">
-      <div class="dropdown__body">
-        <a href="./catalog-individual.html" class="dropdown__list-item ">Биопсия</a>
-        <a href="./catalog-individual.html" class="dropdown__list-item ">Урология</a>
-        <a href="./catalog-individual.html" class="dropdown__list-item ">Гемостатические средства</a>
-        <a href="./catalog-individual.html" class="dropdown__list-item ">Маммология</a>
-        <a href="./catalog-individual.html" class="dropdown__list-item ">Сетчатые импланты</a>
-        <a href="./catalog-individual.html" class="dropdown__list-item ">Шовный материал</a>
-        <a href="./catalog-individual.html" class="dropdown__list-item ">Центральный венозный доступ</a>
-        <a href="./catalog-individual.html" class="dropdown__list-item ">Переферический венозный доступ</a>
-      </div>
-    </div>
-  </div>
-
   <div class="nav-modal">
     <div class="nav-modal__overlay">
       <div class="nav-modal__body">
@@ -337,11 +322,27 @@
               <img src="./common/svg/logo.svg" alt="logo-company" class="logo__icon" />
             </a>
           </div>
+          <div class="header__dropdown-container">
           <button class="main-btn header__dropdown-btn">
             <span>КАТАЛОГ</span>
             <i id="icon" class="header__dropdown-icon-down" stroke="#fff" data-feather="chevron-down"></i>
             <i id="icon" class="header__dropdown-icon-up" stroke="#fff" data-feather="chevron-up"></i>
           </button>
+          <div class="dropdown">
+            <div class="dropdown__owerlay">
+              <div class="dropdown__body">
+                <a href="./catalog-individual.html" class="dropdown__list-item ">Биопсия</a>
+                <a href="./catalog-individual.html" class="dropdown__list-item ">Урология</a>
+                <a href="./catalog-individual.html" class="dropdown__list-item ">Гемостатические средства</a>
+                <a href="./catalog-individual.html" class="dropdown__list-item ">Маммология</a>
+                <a href="./catalog-individual.html" class="dropdown__list-item ">Сетчатые импланты</a>
+                <a href="./catalog-individual.html" class="dropdown__list-item ">Шовный материал</a>
+                <a href="./catalog-individual.html" class="dropdown__list-item ">Центральный венозный доступ</a>
+                <a href="./catalog-individual.html" class="dropdown__list-item ">Переферический венозный доступ</a>
+              </div>
+            </div>
+          </div>
+        </div>
           <div class="search header__search">
             <i id="icon" class="search__icon" data-feather="search"></i>
             <input type="search" placeholder="Введите товар для поиска" class="search__input" />
