--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
         </nav>
       </div>
     </header>
-
+    <main>
     <section class="banner">
       <img src="./common/images/seme-circle-top.png" class="banner__semecircle-top" />
       <img src="./common/images/circle.png" alt="seme circle" class="banner__circle-left" />
@@ -967,6 +967,7 @@
         </div>
       </div>
     </section>
+  </main>
     <footer class="footer">
       <div class="container-main footer__container">
         <div class="footer__top">
