fix: brands and other

--- a/index.html
+++ b/index.html
@@ -741,14 +741,21 @@
         <h3 class="brands__title">Бренды-производители</h3>
         <div class="swiper brands__swiper">
           <div class="swiper-wrapper">
-            <img src="./common/images/brand-plaHold.png" alt="" class=" swiper-slide brands__img">
-            <img src="./common/images/brand-plaHold.png" alt="" class="swiper-slide brands__img">
-            <img src="./common/images/brand-plaHold.png" alt="" class="swiper-slide brands__img">
-            <img src="./common/images/brand-plaHold.png" alt="" class="swiper-slide brands__img">
-            <img src="./common/images/brand-plaHold.png" alt="" class="swiper-slide brands__img">
-            <img src="./common/images/brand-plaHold.png" alt="" class="swiper-slide brands__img">
-            <img src="./common/images/brand-plaHold.png" alt="" class="swiper-slide brands__img">
-            <img src="./common/images/brand-plaHold.png" alt="" class="swiper-slide brands__img">
+            <div class="swiper-slide brands__img">
+              <img src="./common/svg/bard.svg" alt="">
+            </div>
+            <div class="swiper-slide brands__img">
+              <img src="./common/svg/bard.svg" alt="">
+            </div>
+            <div class="swiper-slide brands__img">
+              <img src="./common/svg/bard.svg" alt="">
+            </div>
+            <div class="swiper-slide brands__img">
+              <img src="./common/svg/bard.svg" alt="">
+            </div>
+            <div class="swiper-slide brands__img">
+              <img src="./common/svg/bard.svg" alt="">
+            </div>
           </div>
           <div class="swiper-button-next brands__btn-next"></div>
           <div class="swiper-button-prev brands__btn-prev"></div>
