add: local scripts and styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Alna Medical / Main
   </title>
-  <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="./styles/swiper-bundle.min.css">
   <link rel="stylesheet" href="./styles/main.css" />
 </head>
 
@@ -792,9 +792,6 @@
           <div class="reviews__text">
             <h1 class="reviews__title">отзывы</h1>
           </div>
-          <div class="reviews__quotes">
-            <img src="common/images/quotes.png" alt="">
-          </div>
           <button type="button" class=" main-btn reviews__button">
             <span>Написать отзыв</span>
           </button>
@@ -1083,8 +1080,8 @@
       </div>
     </div>
   </div>
-  <script src="https://unpkg.com/feather-icons"></script>
-  <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+  <script src="./scripts/feather.js"></script>
+  <script src="./scripts/swiper-bundle.min.js"></script>
   <script type="module" src="./scripts/index.js"></script>
   <script type="module" src="./scripts/reviews-all.js"></script>
 </body>
